tcutils/kubernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:
  labels:
    app:
spec:
  replicas:
  selector:
    matchLabels:
      app:
  template:
    metadata:
      labels:
        app:
    spec:
      containers:
      - name:
        image:
        ports:
        - containerPort:
