tcutils/kubernetes/templates/exec_cmd.yaml
apiVersion: v1
kind: Pod
metadata:
  name:
  namespace: default
  command: 
  stderr: true
  stdin: true
  stdout: true
  tty: true
spec:
